# GameEngine

./: .gitignore  2DEngine.sln  CMakeLists.txt  premake5.lua
Core/: CMakeLists.txt  Core.vcxproj  premake5.lua
Core/shaders/: axisFrag.glsl  fragment.glsl  objectFrag.glsl  objectVert.glsl  vertex.glsl
Core/src/: Application.cpp  Application.h  AxisArrow.cpp  AxisArrow.h  Camera.cpp  Camera.h  Component.h  Cube.cpp  Cube.h  ECS.cpp  ECS.h  Engine.cpp  Engine.h  FileUtils.h  FileWatcher.cpp  FileWatcher.h  Gizmo.cpp  Gizmo.h  Input.cpp  Input.h  LightCube.cpp  LightCube.h  Log.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Transform.h  UUID.cpp  UUID.h  Window.cpp  Window.h  (+1 more)
Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  imgui.ini  premake5.lua
Editor/src/: Editor.cpp  Editor.h  imgui.ini  main.cpp
